infrastructure/aws/alb.tf
resource "aws_security_group" "app" {
  name        = "allow_app_ports"
  description = "Allow app ports"
  vpc_id      = module.vpc.result.vpc.id

  ingress {
    description      = "HTTP from public"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTPS from public"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "Backend from public"
    from_port        = 8080
    to_port          = 8080
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}

resource "aws_lb" "this" {
  name               = "app"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.app.id]
  subnets            = [for subnet in module.vpc.result.public_subnets : subnet.id]

  enable_deletion_protection = false
}

resource "aws_alb_target_group" "frontend" {
  name        = "frontend"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = module.vpc.result.vpc.id
  target_type = "ip"

  health_check {
    healthy_threshold   = "3"
    interval            = "30"
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "3"
    path                = "/"
    unhealthy_threshold = "2"
  }
}

resource "aws_lb_listener" "frontend" {
  load_balancer_arn = aws_lb.this.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_alb_listener" "frontend_https" {
  load_balancer_arn = aws_lb.this.id
  port              = 443
  protocol          = "HTTPS"
  certificate_arn   = aws_acm_certificate_validation.this.certificate_arn

  default_action {
    type = "forward"
    forward {
      target_group {
        arn = aws_alb_target_group.frontend.id
      }
      stickiness {
        enabled  = true
        duration = 3600
      }
    }
  }
}

resource "aws_alb_target_group" "backend" {
  name        = "backend"
  port        = 8080
  protocol    = "HTTP"
  vpc_id      = module.vpc.result.vpc.id
  target_type = "ip"

  health_check {
    healthy_threshold   = "3"
    interval            = "30"
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "3"
    path                = "/"
    unhealthy_threshold = "2"
  }
}

resource "aws_alb_listener" "backend" {
  load_balancer_arn = aws_lb.this.id
  port              = 8080
  protocol          = "HTTPS"
  certificate_arn   = aws_acm_certificate_validation.this.certificate_arn

  default_action {
    type = "forward"
    forward {
      target_group {
        arn = aws_alb_target_group.backend.id
      }
      stickiness {
        enabled  = true
        duration = 3600
      }
    }
  }
}

resource "aws_route53_record" "lightfeather" {
  zone_id = data.aws_route53_zone.bananalab.zone_id
  name    = local.app_host
  type    = "A"

  alias {
    name                   = aws_lb.this.dns_name
    zone_id                = aws_lb.this.zone_id
    evaluate_target_health = true
  }
}
